@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-10T08:08:59Z",
-  "count_outdated" : 1439,
-  "uniques_outdated" : 533,
-  "count" : 1505,
-  "uniques" : 553,
+  "timestamp" : "2023-08-11T16:07:31Z",
+  "count_outdated" : 1442,
+  "uniques_outdated" : 534,
+  "count" : 1508,
+  "uniques" : 555,
   "views" : [
-    {
-      "timestamp": "2023-07-28T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-30T00:00:00Z",
       "count": 6,
@@ -112,6 +103,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-11T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
