@@ -1,12 +1,7 @@
 {
   "count": 66,
-  "uniques": 16,
+  "uniques": 17,
   "views": [
-    {
-      "timestamp": "2023-07-28T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-30T00:00:00Z",
       "count": 6,
@@ -61,6 +56,11 @@
       "timestamp": "2023-08-10T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-11T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
